--- a/blender_manifest.toml
+++ b/blender_manifest.toml
@@ -34,3 +34,13 @@ blender_version_min = "4.2.0"
 license = ["SPDX:GPL-2.0-or-later"]
 # Optional: required by some licenses.
 # copyright = []
+
+# Optional: bundle 3rd party Python modules.
+# https://docs.blender.org/manual/en/dev/extensions/python_wheels.html
+wheels = [
+    "./wheels/blake3-0.4.1-cp311-cp311-macosx_10_12_x86_64.whl",
+    "./wheels/blake3-0.4.1-cp311-cp311-macosx_11_0_arm64.whl",
+    "./wheels/blake3-0.4.1-cp311-cp311-manylinux_2_17_x86_64.manylinux2014_x86_64.whl",
+    "./wheels/blake3-0.4.1-cp311-none-win32.whl",
+    "./wheels/blake3-0.4.1-cp311-none-win_amd64.whl",
+]
