--- a/blender_manifest.toml
+++ b/blender_manifest.toml
@@ -1,13 +1,10 @@
 schema_version = "1.0.0"
 
-# Example of manifest file for a Blender extension
-# Change the values according to your extension
 id = "cadbase_library"
 version = "0.1.2"
 name = "CADBase Library"
 tagline = "This is an addon for synchronizing local data with cloud storage"
 maintainer = "mnnxp <in@cadbase.rs>"
-# Supported types: "add-on", "theme"
 type = "add-on"
 
 # Optional: add-ons can list which resources they will require:
@@ -26,21 +23,17 @@ website = "https://cadbase.rs/"
 tags = ["Import-Export", "User Interface"]
 
 blender_version_min = "4.2.0"
-# Optional: maximum supported Blender version
-# blender_version_max = "5.1.0"
 
 # License conforming to https://spdx.org/licenses/ (use "SPDX: prefix)
 # https://docs.blender.org/manual/en/dev/extensions/licenses.html
 license = ["SPDX:GPL-2.0-or-later"]
-# Optional: required by some licenses.
-# copyright = []
 
 # Optional: bundle 3rd party Python modules.
 # https://docs.blender.org/manual/en/dev/extensions/python_wheels.html
 wheels = [
-    "wheels/blake3-0.4.1-cp311-cp311-macosx_10_12_x86_64.whl",
-    "wheels/blake3-0.4.1-cp311-cp311-macosx_11_0_arm64.whl",
-    "wheels/blake3-0.4.1-cp311-cp311-manylinux_2_17_x86_64.manylinux2014_x86_64.whl",
-    "wheels/blake3-0.4.1-cp311-none-win32.whl",
-    "wheels/blake3-0.4.1-cp311-none-win_amd64.whl",
+    "./wheels/blake3-0.4.1-cp311-cp311-macosx_10_12_x86_64.whl",
+    "./wheels/blake3-0.4.1-cp311-cp311-macosx_11_0_arm64.whl",
+    "./wheels/blake3-0.4.1-cp311-cp311-manylinux_2_17_x86_64.manylinux2014_x86_64.whl",
+    "./wheels/blake3-0.4.1-cp311-none-win32.whl",
+    "./wheels/blake3-0.4.1-cp311-none-win_amd64.whl",
 ]
