--- a/blender_manifest.toml
+++ b/blender_manifest.toml
@@ -9,7 +9,7 @@ type = "add-on"
 
 # Optional link to documentation, support, source files, etc
 # website = "http://extensions.blender.org/add-ons/my-example-package/"
-website = "https://cadbase.rs/"
+website = "https://app.cadbase.rs/"
 
 # Optional list defined by Blender and server, see:
 # https://docs.blender.org/manual/en/dev/extensions/tags.html
