--- a/blender_manifest.toml
+++ b/blender_manifest.toml
@@ -6,23 +6,12 @@ name = "CADBase Library"
 tagline = "Add-on for synchronizing local data with cloud storage"
 maintainer = "mnnxp <in@cadbase.rs>"
 type = "add-on"
-
-# Optional link to documentation, support, source files, etc
-# website = "http://extensions.blender.org/add-ons/my-example-package/"
 website = "https://app.cadbase.rs/"
-
-# Optional list defined by Blender and server, see:
-# https://docs.blender.org/manual/en/dev/extensions/tags.html
 tags = ["Import-Export", "User Interface"]
 
 blender_version_min = "4.2.0"
 
-# License conforming to https://spdx.org/licenses/ (use "SPDX: prefix)
-# https://docs.blender.org/manual/en/dev/extensions/licenses.html
 license = ["SPDX:GPL-2.0-or-later"]
-
-# Optional: bundle 3rd party Python modules.
-# https://docs.blender.org/manual/en/dev/extensions/python_wheels.html
 wheels = [
     "./wheels/blake3-0.4.1-cp312-none-win_amd64.whl",
     "./wheels/blake3-0.4.1-cp312-none-win32.whl",
@@ -30,8 +19,6 @@ wheels = [
     "./wheels/blake3-0.4.1-cp312-cp312-macosx_11_0_arm64.whl",
     "./wheels/blake3-0.4.1-cp312-cp312-macosx_10_12_x86_64.whl",
 ]
-
-# Optional: add-ons can list which resources they will require:
-# [permissions]
+[permissions]
 network = "Need to to sync library data with a remote server"
 files = "Import/export library data from/to disk"
