--- a/blender_manifest.toml
+++ b/blender_manifest.toml
@@ -18,6 +18,11 @@ wheels = [
     "./wheels/blake3-0.4.1-cp311-cp311-manylinux_2_17_x86_64.manylinux2014_x86_64.whl",
     "./wheels/blake3-0.4.1-cp311-cp311-macosx_11_0_arm64.whl",
     "./wheels/blake3-0.4.1-cp311-cp311-macosx_10_12_x86_64.whl",
+    "./wheels/blake3-0.4.1-cp312-none-win_amd64.whl",
+    "./wheels/blake3-0.4.1-cp312-none-win32.whl",
+    "./wheels/blake3-0.4.1-cp312-cp312-manylinux_2_17_x86_64.manylinux2014_x86_64.whl",
+    "./wheels/blake3-0.4.1-cp312-cp312-macosx_11_0_arm64.whl",
+    "./wheels/blake3-0.4.1-cp312-cp312-macosx_10_12_x86_64.whl",
 ]
 [permissions]
 network = "Need to to sync library data with a remote server"
