--- a/blender_manifest.toml
+++ b/blender_manifest.toml
@@ -1,7 +1,7 @@
 schema_version = "1.0.0"
 
 id = "cadbase_library"
-version = "0.1.4"
+version = "0.1.5"
 name = "CADBase Library"
 tagline = "Add-on for synchronizing local data with cloud storage"
 maintainer = "mnnxp <in@cadbase.rs>"
@@ -13,6 +13,11 @@ blender_version_min = "4.2.0"
 
 license = ["SPDX:GPL-3.0-or-later"]
 wheels = [
+    "./wheels/blake3-0.4.1-cp311-none-win_amd64.whl",
+    "./wheels/blake3-0.4.1-cp311-none-win32.whl",
+    "./wheels/blake3-0.4.1-cp311-cp311-manylinux_2_17_x86_64.manylinux2014_x86_64.whl",
+    "./wheels/blake3-0.4.1-cp311-cp311-macosx_11_0_arm64.whl",
+    "./wheels/blake3-0.4.1-cp311-cp311-macosx_10_12_x86_64.whl",
     "./wheels/blake3-0.4.1-cp312-none-win_amd64.whl",
     "./wheels/blake3-0.4.1-cp312-none-win32.whl",
     "./wheels/blake3-0.4.1-cp312-cp312-manylinux_2_17_x86_64.manylinux2014_x86_64.whl",
